EandT/main/default/objects/Concession_Card__c/Concession_Card__c.object-meta.xml
<CustomObject>
    <description>Allows a customer to prepay for classes in return for a discount
Entitles a customer to a number of classes - if the price goes up while the card is still valid, the number of classes the student is entitled to does not reduce.</description>
    <label>Concession Card</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Concession Card #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concession Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>