EandT/main/default/objects/Concession_Card__c/fields/Card_Expired__c.field-meta.xml
<CustomField>
    <fullName>Card_Expired__c</fullName>
    <description>Card has expired if session or value balance less than or equal to zero or expiry date has past.  Card is still valid on the expiry date itself</description>
    <formula>Sessions_Balance__c &lt;= 0  ||  Expiry_Date__c &lt; Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Card has expired because sessions or value balance is less than or equal to zero - or if the expiry date has passed. Note that the card is still valid on the actual expiry date itself.</inlineHelpText>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>