EandT/main/default/objects/Concession_Card__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Class Type</label>
    <referenceTo>Class_Type__c</referenceTo>
    <relationshipLabel>Concession Cards</relationshipLabel>
    <relationshipName>Concession_Cards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>