EandT/main/default/objects/Concession_Card__c/fields/Customer_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Customer_Firstname__c</fullName>
    <description>Denormalised field for use in card expiry email</description>
    <formula>Customer__r.FirstName</formula>
    <label>Customer Firstname</label>
    <type>Text</type>
</CustomField>