EandT/main/default/objects/Concession_Card__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <inlineHelpText>If a date is entered here, the card may not be used to pay for classes after this date.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>