EandT/main/default/objects/Concession_Card__c/fields/Expiry_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Reminder_Sent__c</fullName>
    <description>Shows the date that the system sent an email reminder to the owner of the card and created the task for the record owner to get the card renewed</description>
    <inlineHelpText>Date that email reminder to renew the card was sent</inlineHelpText>
    <label>Expiry Reminder Sent</label>
    <type>Date</type>
</CustomField>