EandT/main/default/objects/Concession_Card__c/fields/Owner_email__c.field-meta.xml
<CustomField>
    <fullName>Owner_email__c</fullName>
    <description>Holds a copy of the owner email.  Populated by an filed update workflow rule on create</description>
    <label>Owner email</label>
    <type>Email</type>
</CustomField>