EandT/main/default/objects/Concession_Card__c/fields/Sessions__c.field-meta.xml
<CustomField>
    <fullName>Sessions__c</fullName>
    <inlineHelpText>The number of classes purchased with this card. Default = 10</inlineHelpText>
    <label># Sessions</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>