EandT/main/default/objects/Concession_Card__c/fields/Sessions_Balance__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Balance__c</fullName>
    <formula>Sessions__c - Sessions_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Sessions Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>