EandT/main/default/objects/Concession_Card__c/fields/Sessions_Used__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Sessions Used</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>