EandT/main/default/objects/Concession_Card__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>