EandT/main/default/objects/Concession_Card__c/fields/Value_Balance__c.field-meta.xml
<CustomField>
    <fullName>Value_Balance__c</fullName>
    <formula>Value__c - Value_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>