EandT/main/default/objects/Concession_Card__c/fields/Value_Used__c.field-meta.xml
<CustomField>
    <fullName>Value_Used__c</fullName>
    <label>Value Used</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>