EandT/main/default/objects/Concession_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Card_Expired__c</columns>
    <columns>Value__c</columns>
    <columns>Value_Used__c</columns>
    <columns>Value_Balance__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Sessions__c</columns>
    <columns>Sessions_Used__c</columns>
    <columns>Sessions_Balance__c</columns>
    <columns>Expiry_Reminder_Sent__c</columns>
    <columns>Class_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>